Fixing the aside being 10px too high up

--- a/sites/all/themes/lapcat/less/layout.less
+++ b/sites/all/themes/lapcat/less/layout.less
@@ -699,6 +699,7 @@ li{
   position: relative;
 }
 /*Global tweeks*/
+aside{margin-top:10px;}
 aside div,section div,.smallSection,.middleSection,.mediumSection{
   margin-bottom:10px;
 }
